Редактирование разметки (изменение адресов ссылок)

--- a/cataolg-monopod.html
+++ b/cataolg-monopod.html
@@ -17,8 +17,8 @@
         Поиск по сайту
       </div>
       <ul class="user-navigation">
-        <li class="user-link">Валентин Петухов</li>
-        <li class="login-link">Войти</li>
+        <a href="user.html">Валентин Петухов</a>
+        <li class="login-link">Выйти</li>
       </ul>
       <ul class="goods-navigation">
         <li class="compare"><a href="#">Сравнить</a></li>
@@ -33,7 +33,7 @@
                 <a href="#">Виртуальная реальность</a>
               </li>
               <li>
-                <a href="cataolg-monopod.html">Моноподы для селфи</a>
+                <a>Моноподы для селфи</a>
               </li>
               <li>
                 <a href="#">Экшн-камеры</a>
@@ -126,6 +126,7 @@
             <a href="catalog-item.html">
               <img src="img/product-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
             </a>
+            <span>NEW</span>
           </p>
           <p class="catalog-item-price">4 900 руб.</p>
         </li>
@@ -139,7 +140,10 @@
     </a>
     <address>г. Москва, ул. Строителей, 15</address>
     <ul class="user-navigation">
-      <li class="login-link">Войти</li>
+      <li class="user-link">
+        <a href="user.html">Валентин Петухов</a>
+      </li>
+      <li class="login-link">Выйти</li>
     </ul>
     <ul class="goods-navigation">
       <li class="compare"><a href="#">Сравнить</a></li>
@@ -167,14 +171,13 @@
     <a href="//htmlacademy.ru/intensive/htmlcss">
       <img src="htmlacademy-logo.svg" alt="Логотип HTML Academy">
     </a>
-
   </footer>
 
   <section class="contacts">
     <h2 class="visually-hidden">Письмо нам</h2>
     <!--Здесь будет форма-->
   </section>
-  
+
 </body>
 
 </html>
