Доработка по замечаниям наставника

--- a/cataolg-monopod.html
+++ b/cataolg-monopod.html
@@ -17,13 +17,15 @@
         Поиск по сайту
       </div>
       <ul class="user-navigation">
-        <a href="user.html">Валентин Петухов</a>
+        <li class="user-link">
+          <a href="user.html">Валентин Петухов</a>
+        </li>
         <li class="login-link">Выйти</li>
       </ul>
-      <ul class="goods-navigation">
-        <li class="compare"><a href="#">Сравнить</a></li>
-        <li class="basket"><a href="#">Корзина</a></li>
-      </ul>
+      <div class="goods-navigation">
+        <a class="compare" href="#">Сравнить</a>
+        <a class="basket" href="#">Корзина</a>
+      </div>
       <ul class="site-navigation">
         <li>
           <a href="#">Каталог товаров</a>
@@ -54,13 +56,13 @@
             </ul>
           </div>
         </li>
-        <li class="site-navigation-item">
+        <li>
           <a href="#">Доставка</a>
         </li>
-        <li class="site-navigation-item">
+        <li>
           <a href="#">Гарантия</a>
         </li>
-        <li class="site-navigation-item">
+        <li>
           <a href="#">Контакты</a>
         </li>
       </ul>
@@ -126,7 +128,6 @@
             <a href="catalog-item.html">
               <img src="img/product-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
             </a>
-            <span>NEW</span>
           </p>
           <p class="catalog-item-price">4 900 руб.</p>
         </li>
@@ -145,10 +146,10 @@
       </li>
       <li class="login-link">Выйти</li>
     </ul>
-    <ul class="goods-navigation">
-      <li class="compare"><a href="#">Сравнить</a></li>
-      <li class="basket"><a href="#">Корзина</a></li>
-    </ul>
+    <div class="goods-navigation">
+      <a class="compare" href="#">Сравнить</a>
+      <a class="basket" href="#">Корзина</a>
+    </div>
     <ul class="site-navigation">
       <li>
         <a href="#">Доставка</a>
@@ -161,7 +162,7 @@
       </li>
     </ul>
     <p>
-      <span>Тел:</span><a href="tel:+74954959595">+7 (495) 495-95-95</a>
+      Тел:<a href="tel:+74954959595">+7 (495) 495-95-95</a>
     </p>
     <ul>
       <li class="social-button"><a href="#">Фейсбук</a></li>
