--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       <ul class="user-navigation">
         <li class="login-link">Войти</li>
       </ul>
-      <ul class="goods-navigation">
-        <li class="compare"><a href="#">Сравнить</a></li>
-        <li class="basket"><a href="#">Корзина</a></li>
-      </ul>
+      <div class="goods-navigation">
+        <a class="compare" href="#">Сравнить</a>
+        <a class="basket" href="#">Корзина</a>
+      </div>
       <ul class="site-navigation">
         <li>
           <a href="#">Каталог товаров</a>
@@ -72,8 +72,7 @@
     <section class="about">
       <h2>О нас</h2>
       <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
-      <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными
-        компаниями:</p>
+      <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
       <ul>
         <li>Деловые Линии</li>
         <li>Автотрейдинг</li>
@@ -84,8 +83,7 @@
 
     <section class="contacts">
       <h2>Контакты</h2>
-      <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое
-        бывает.</p>
+      <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
       <a href="#">
         <img src="img/map.jpg" alt="Местоположение на карте">
       </a>
@@ -102,10 +100,10 @@
     <ul class="user-navigation">
       <li class="login-link">Войти</li>
     </ul>
-    <ul class="goods-navigation">
-      <li class="compare"><a href="#">Сравнить</a></li>
-      <li class="basket"><a href="#">Корзина</a></li>
-    </ul>
+    <div class="goods-navigation">
+      <a class="compare" href="#">Сравнить</a>
+      <a class="basket" href="#">Корзина</a>
+    </div>
     <ul class="site-navigation">
       <li>
         <a href="#">Доставка</a>
@@ -118,7 +116,7 @@
       </li>
     </ul>
     <p>
-      <span>Тел:</span><a href="tel:+74954959595">+7 (495) 495-95-95</a>
+      Тел:<a href="tel:+74954959595">+7 (495) 495-95-95</a>
     </p>
     <ul>
       <li class="social-button"><a href="#">Фейсбук</a></li>
