Экспорт графики, подключение контентных изображений

--- a/cataolg-monopod.html
+++ b/cataolg-monopod.html
@@ -10,7 +10,7 @@
   <header class="header-main">
     <nav class="navigation-main">
       <a class="header-main-logo" href="index.html">
-        <img src="img/logo.svg" alt="Логотип Device" width="163" height="35">
+        <img src="img/logo-device-black.svg" alt="Логотип Device" width="163" height="35">
       </a>
       <div>
         <!--Здесь будет форма-->
@@ -137,7 +137,7 @@
 
   <footer class="main-footer">
     <a class="main-footer-logo" href="index.html">
-      <img src="img/logo.svg" alt="Логотип Device" width="163" height="35">
+      <img src="img/logo-device-yellow.svg" alt="Логотип Device" width="163" height="35">
     </a>
     <address>г. Москва, ул. Строителей, 15</address>
     <ul class="user-navigation">
@@ -170,7 +170,7 @@
       <li class="social-button"><a href="#">Твиттер</a></li>
     </ul>
     <a href="//htmlacademy.ru/intensive/htmlcss">
-      <img src="htmlacademy-logo.svg" alt="Логотип HTML Academy">
+      <img src="img/logo-htmlacademy.svg" alt="Логотип HTML Academy">
     </a>
   </footer>
 
