--- a/catalog.html
+++ b/catalog.html
@@ -2,15 +2,15 @@
 <html lang="ru">
 
 <head>
-  <meta charset="utf-8">
-  <title>Device</title>
+  <meta charset="UTF-8">
+  <title>Моноподы для селфи</title>
 </head>
 
 <body>
   <header class="header-main">
     <nav class="navigation-main">
-      <a class="header-main-logo">
-        <svg width="163" height="35" viewBox="0 0 164 35" role="img">
+      <a class="header-main-logo" href="index.html">
+        <svg width="163" height="35" role="img">
           <title>Логотип Device</title>
           <path d="M-.151.702v33.6h13.532a15.72 15.72 0 0 0 11.72-4.824 16.458 16.458 0 0 0 4.712-11.976 16.458 16.458 0 0 0-4.712-11.976A15.723 15.723 0 0 0 13.381.702H-.151zM7.582 26.91V8.091h5.8a8.646 8.646 0 0 1 6.5 2.568 9.407 9.407 0 0 1 2.489 6.84 9.406 9.406 0 0 1-2.489 6.84 8.642 8.642 0 0 1-6.5 2.568h-5.8zm34.8-5.952h12.082v-7.3H42.378V8.091h13.291V.702H34.645v33.6H55.91V26.91H42.378v-5.952zm36.343 13.344L89.744.702h-8.458l-7.491 24.72L66.304.702h-8.457l11.019 33.6h9.859zm14.4 0h7.733V.702h-7.733v33.6zm38.615-1.416a15.506 15.506 0 0 0 6.041-5.688l-6.67-3.84a7.482 7.482 0 0 1-3.165 3.024 9.87 9.87 0 0 1-4.664 1.1 9.595 9.595 0 0 1-7.177-2.736 9.909 9.909 0 0 1-2.682-7.248 9.909 9.909 0 0 1 2.682-7.248 9.595 9.595 0 0 1 7.177-2.736 9.897 9.897 0 0 1 4.639 1.08 7.592 7.592 0 0 1 3.19 3.048l6.67-3.84a15.873 15.873 0 0 0-6.09-5.688 17.42 17.42 0 0 0-8.409-2.088c-9.779-.272-17.797 7.691-17.591 17.472-.208 9.781 7.809 17.747 17.588 17.476a17.52 17.52 0 0 0 8.458-2.088zm17.881-11.928h12.082v-7.3h-12.085V8.091h13.29V.702h-21.023v33.6h21.265V26.91h-13.532v-5.952z">
         </svg>
@@ -20,7 +20,10 @@
         Поиск по сайту
       </div>
       <ul class="user-navigation">
-        <li class="login-link">Войти</li>
+        <li class="user-link">
+          <a href="user.html">Валентин Петухов</a>
+        </li>
+        <li class="login-link">Выйти</li>
       </ul>
       <div class="goods-navigation">
         <a class="compare" href="#">Сравнить</a>
@@ -35,7 +38,7 @@
                 <a href="#">Виртуальная реальность</a>
               </li>
               <li>
-                <a href="catalog.html">Моноподы для селфи</a>
+                <a>Моноподы для селфи</a>
               </li>
               <li>
                 <a href="#">Экшн-камеры</a>
@@ -70,41 +73,85 @@
   </header>
 
   <main>
-    <h1 class="visually-hidden">Главная страница "Device"</h1>
+    <h1>Моноподы для селфи</h1>
 
-    <section class="about">
-      <h2>О нас</h2>
-      <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
-      <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
-      <ul>
-        <li>Деловые Линии</li>
-        <li>Автотрейдинг</li>
-        <li>ЖелДорЭкспедиция</li>
-      </ul>
-      <a class="button" href="#">Подробнее о нас</a>
+    <ul class="breadcrumbs">
+      <li><a href="index.html">Главная</a></li>
+      <li><a href="catalog.html">Каталог товаров</a></li>
+      <li class="breadcrumbs-current">Моноподы для селфи</li>
+    </ul>
+
+    <section class="filters">
+      <h2 class="visually-hidden">Фильтр товаров</h2>
+      <!-- Здесь будет форма -->
     </section>
 
-    <section class="contacts">
-      <h2>Контакты</h2>
-      <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-      <a href="#">
-        <img src="img/map.jpg" alt="Местоположение на карте">
-      </a>
-      <a class="button" href="#">Напишите нам</a>
+    <section class="catalog">
+      <h2 class="visually-hidden">Список моноподов для селфи</h2>
+
+      <ul class="catalog-list">
+        <li class="catalog-item">
+          <h3>
+            <a href="catalog-item.html">Любительская селфи-палка</a>
+          </h3>
+          <p class="catalog-item-image">
+            <a href="catalog-item.html">
+              <img src="img/product-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
+            </a>
+          </p>
+          <p class="catalog-item-price">500 руб.</p>
+        </li>
+        <li class="catalog-item">
+          <h3>
+            <a href="catalog-item.html">Профессиональная селфи-палка</a>
+          </h3>
+          <p class="catalog-item-image">
+            <a href="catalog-item.html">
+              <img src="img/product-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
+            </a>
+          </p>
+          <p class="catalog-item-price">1 500 руб.</p>
+        </li>
+        <li class="catalog-item">
+          <h3>
+            <a href="catalog-item.html">Непотопляемая селфи-палка</a>
+          </h3>
+          <p class="catalog-item-image">
+            <a href="catalog-item.html">
+              <img src="img/product-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
+            </a>
+          </p>
+          <p class="catalog-item-price">2 500 руб.</p>
+        </li>
+        <li class="catalog-item">
+          <h3>
+            <a href="catalog-item.html">Селфи-палка «Следуй за мной»</a>
+          </h3>
+          <p class="catalog-item-image">
+            <a href="catalog-item.html">
+              <img src="img/product-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
+            </a>
+            <span>NEW</span>
+          </p>
+          <p class="catalog-item-price">4 900 руб.</p>
+        </li>
+      </ul>
     </section>
   </main>
 
   <footer class="main-footer">
-    <a class="main-footer-logo">
-      <svg width="163" height="35" viewBox="0 0 164 35" role="img">
+    <a class="main-footer-logo" href="index.html">
+      <svg width="163" height="35" role="img">
         <title>Логотип Device</title>
         <path d="M-.151.702v33.6h13.532a15.72 15.72 0 0 0 11.72-4.824 16.458 16.458 0 0 0 4.712-11.976 16.458 16.458 0 0 0-4.712-11.976A15.723 15.723 0 0 0 13.381.702H-.151zM7.582 26.91V8.091h5.8a8.646 8.646 0 0 1 6.5 2.568 9.407 9.407 0 0 1 2.489 6.84 9.406 9.406 0 0 1-2.489 6.84 8.642 8.642 0 0 1-6.5 2.568h-5.8zm34.8-5.952h12.082v-7.3H42.378V8.091h13.291V.702H34.645v33.6H55.91V26.91H42.378v-5.952zm36.343 13.344L89.744.702h-8.458l-7.491 24.72L66.304.702h-8.457l11.019 33.6h9.859zm14.4 0h7.733V.702h-7.733v33.6zm38.615-1.416a15.506 15.506 0 0 0 6.041-5.688l-6.67-3.84a7.482 7.482 0 0 1-3.165 3.024 9.87 9.87 0 0 1-4.664 1.1 9.595 9.595 0 0 1-7.177-2.736 9.909 9.909 0 0 1-2.682-7.248 9.909 9.909 0 0 1 2.682-7.248 9.595 9.595 0 0 1 7.177-2.736 9.897 9.897 0 0 1 4.639 1.08 7.592 7.592 0 0 1 3.19 3.048l6.67-3.84a15.873 15.873 0 0 0-6.09-5.688 17.42 17.42 0 0 0-8.409-2.088c-9.779-.272-17.797 7.691-17.591 17.472-.208 9.781 7.809 17.747 17.588 17.476a17.52 17.52 0 0 0 8.458-2.088zm17.881-11.928h12.082v-7.3h-12.085V8.091h13.29V.702h-21.023v33.6h21.265V26.91h-13.532v-5.952z">
       </svg>
     </a>
     <address>г. Москва, ул. Строителей, 15</address>
-
     <ul class="user-navigation">
-      <li class="login-link">Войти</li>
+      <li class="user-link">
+        <a href="user.html">Валентин Петухов</a>
+      </li>
+      <li class="login-link">Выйти</li>
     </ul>
     <div class="goods-navigation">
       <a class="compare" href="#">Сравнить</a>
@@ -136,11 +183,6 @@
 
   <section class="contacts">
     <h2 class="visually-hidden">Письмо нам</h2>
-    <!--Здесь будет форма-->
-  </section>
-
-  <section class="map">
-    <h2 class="visually-hidden">Карта</h2>
     <!--Здесь будет форма-->
   </section>
 
