Добавлена форма поиска по сайту

--- a/catalog.html
+++ b/catalog.html
@@ -16,8 +16,11 @@
         </svg>
       </a>
       <div>
-        <!--Здесь будет форма-->
-        Поиск по сайту
+        <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
+          <label for="search-field">Поиск по сайту</label>
+          <input id="search-field" type="search" placeholder="Поиск по сайту">
+          <button class="search-form-button" type="submit">Найти</button>
+        </form>
       </div>
       <ul class="user-navigation">
         <li class="user-link">
