--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
         </svg>
       </a>
       <div>
-        <!--Здесь будет форма-->
-        Поиск по сайту
+        <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
+          <label for="search-field">Поиск по сайту</label>
+          <input id="search-field" type="search" placeholder="Поиск по сайту">
+          <button class="search-form-button" type="submit">Найти</button>
+        </form>
       </div>
       <ul class="user-navigation">
         <li class="login-link">Войти</li>
@@ -88,7 +91,7 @@
       <h2>Контакты</h2>
       <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
       <a href="#">
-        <img src="img/map.jpg" alt="Местоположение на карте">
+        <img src="img/map.jpg" alt="Офис Девайс по адресу: улица Строителей дом 15, город Москва">
       </a>
       <a class="button" href="#">Напишите нам</a>
     </section>
