Добавлены лейблы к ссылкам на социальные сети

--- a/catalog.html
+++ b/catalog.html
@@ -26,7 +26,9 @@
         <li class="user-link">
           <a href="user.html">Валентин Петухов</a>
         </li>
-        <li class="login-link">Выйти</li>
+        <li class="login-link">
+          <a href="#">Выйти</a>
+        </li>
       </ul>
       <div class="goods-navigation">
         <a class="compare" href="#">Сравнить</a>
@@ -175,9 +177,9 @@
       Тел:<a href="tel:+74954959595">+7 (495) 495-95-95</a>
     </p>
     <ul>
-      <li class="social-button"><a href="#">Фейсбук</a></li>
-      <li class="social-button"><a href="#">Инстаграм</a></li>
-      <li class="social-button"><a href="#">Твиттер</a></li>
+      <li class="social-button"><a href="#" aria-label="Девайс на Фейсбуке"></a></li>
+      <li class="social-button"><a href="#" aria-label="Девайс в Инстаграме"></a></li>
+      <li class="social-button"><a href="#" aria-label="Девайс в Твиттере"></a></li>
     </ul>
     <a href="//htmlacademy.ru/intensive/htmlcss">
       <img src="img/logo-htmlacademy.svg" alt="Логотип HTML Academy">
