--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         </form>
       </div>
       <ul class="user-navigation">
-        <li class="login-link">Войти</li>
+        <li class="login-link">
+          <a href="login.html">Войти</a>
+        </li>
       </ul>
       <div class="goods-navigation">
         <a class="compare" href="#">Сравнить</a>
@@ -128,9 +130,9 @@
       Тел:<a href="tel:+74954959595">+7 (495) 495-95-95</a>
     </p>
     <ul>
-      <li class="social-button"><a href="#">Фейсбук</a></li>
-      <li class="social-button"><a href="#">Инстаграм</a></li>
-      <li class="social-button"><a href="#">Твиттер</a></li>
+      <li class="social-button"><a href="#" aria-label="Девайс на Фейсбуке"></a></li>
+      <li class="social-button"><a href="#" aria-label="Девайс в Инстаграме"></a></li>
+      <li class="social-button"><a href="#" aria-label="Девайс в Твиттере"></a></li>
     </ul>
     <a href="//htmlacademy.ru/intensive/htmlcss">
       <img src="img/logo-htmlacademy.svg" alt="Логотип HTML Academy">
