Добавлена кнопка закрытия формы отправки письма

--- a/catalog.html
+++ b/catalog.html
@@ -203,6 +203,7 @@
       </p>
       <button class="button" type="submit">Отправить</button>
     </form>
+    <button class="modal-button" type="button">Закрыть</button>
   </section>
 
 </body>
