--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
       </p>
       <button class="button" type="submit">Отправить</button>
     </form>
+    <button class="modal-button" type="button">Закрыть</button>
   </section>
 
   <section class="map">
