Добавлена разметка модального окна с картой

--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
 
   <section class="map">
     <h2 class="visually-hidden">Карта</h2>
-    <!--Здесь будет форма-->
+    <img src="img/map.jpg" alt="Офис Девайс по адресу: улица Строителей дом 15, город Москва">
+    <button class="modal-button" type="button">Закрыть</button>
   </section>
 
 </body>
