Редактирование разметки каталога

--- a/catalog.html
+++ b/catalog.html
@@ -134,17 +134,18 @@
 
     <section class="catalog">
       <h2 class="visually-hidden">Список моноподов для селфи</h2>
-
       <ul class="catalog-list">
         <li class="catalog-item">
           <h3>
             <a href="catalog-item.html">Любительская селфи-палка</a>
           </h3>
           <p class="catalog-item-image">
-            <a href="catalog-item.html">
-              <img src="img/product-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
-            </a>
+            <img src="img/product-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
           </p>
+          <div class="catalog-item-hover">
+            <a class="button" href="#">В корзину</a>
+            <a href="#">Добавить к сравнению</a>
+          </div>
           <p class="catalog-item-price">500 руб.</p>
         </li>
         <li class="catalog-item">
@@ -152,10 +153,12 @@
             <a href="catalog-item.html">Профессиональная селфи-палка</a>
           </h3>
           <p class="catalog-item-image">
-            <a href="catalog-item.html">
-              <img src="img/product-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
-            </a>
+            <img src="img/product-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
           </p>
+          <div class="catalog-item-hover">
+            <a class="button" href="#">В корзину</a>
+            <a href="#">Добавить к сравнению</a>
+          </div>
           <p class="catalog-item-price">1 500 руб.</p>
         </li>
         <li class="catalog-item">
@@ -163,10 +166,12 @@
             <a href="catalog-item.html">Непотопляемая селфи-палка</a>
           </h3>
           <p class="catalog-item-image">
-            <a href="catalog-item.html">
-              <img src="img/product-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
-            </a>
+            <img src="img/product-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
           </p>
+          <div class="catalog-item-hover">
+            <a class="button" href="#">В корзину</a>
+            <a href="#">Добавить к сравнению</a>
+          </div>
           <p class="catalog-item-price">2 500 руб.</p>
         </li>
         <li class="catalog-item">
@@ -174,11 +179,13 @@
             <a href="catalog-item.html">Селфи-палка «Следуй за мной»</a>
           </h3>
           <p class="catalog-item-image">
-            <a href="catalog-item.html">
-              <img src="img/product-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
-            </a>
+            <img src="img/product-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
             <span>NEW</span>
           </p>
+          <div class="catalog-item-hover">
+            <a class="button" href="#">В корзину</a>
+            <a href="#">Добавить к сравнению</a>
+          </div>
           <p class="catalog-item-price">4 900 руб.</p>
         </li>
       </ul>
