--- a/catalog.html
+++ b/catalog.html
@@ -26,7 +26,7 @@
         <li class="user-link">
           <a href="user.html">Валентин Петухов</a>
         </li>
-        <li class="login-link">
+        <li class="logout-link">
           <a href="#">Выйти</a>
         </li>
       </ul>
@@ -204,7 +204,9 @@
       <li class="user-link">
         <a href="user.html">Валентин Петухов</a>
       </li>
-      <li class="login-link">Выйти</li>
+      <li class="logout-link">
+        <a href="#">Выйти</a>
+      </li>
     </ul>
     <div class="goods-navigation">
       <a class="compare" href="#">Сравнить</a>
