--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
     <address>г. Москва, ул. Строителей, 15</address>
 
     <ul class="user-navigation">
-      <li class="login-link">Войти</li>
+      <li class="login-link">
+        <a href="login.html">Войти</a>
+      </li>
     </ul>
     <div class="goods-navigation">
       <a class="compare" href="#">Сравнить</a>
