--- a/catalog.html
+++ b/catalog.html
@@ -18,7 +18,7 @@
       <div>
         <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
           <label for="search-field">Поиск по сайту</label>
-          <input id="search-field" type="search" placeholder="Поиск по сайту">
+          <input id="search-field" type="search" name="search" placeholder="Поиск по сайту">
           <button class="search-form-button" type="submit">Найти</button>
         </form>
       </div>
