--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
   <section class="map">
     <h2 class="visually-hidden">Карта</h2>
-    <img src="img/map.jpg" alt="Офис Девайс по адресу: улица Строителей дом 15, город Москва">
+    <img src="img/map-modal.jpg" alt="Офис Девайс по адресу: улица Строителей дом 15, город Москва">
     <button class="modal-button" type="button">Закрыть</button>
   </section>
 
