Добавлены размеры к избражениям с картой

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <h2>Контакты</h2>
       <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
       <a href="#">
-        <img src="img/map.jpg" alt="Офис Девайс по адресу: улица Строителей дом 15, город Москва">
+        <img src="img/map.jpg" width="560" height="222" alt="Офис Девайс по адресу: улица Строителей дом 15, город Москва">
       </a>
       <a class="button" href="#">Напишите нам</a>
     </section>
@@ -163,7 +163,7 @@
 
   <section class="map">
     <h2 class="visually-hidden">Карта</h2>
-    <img src="img/map-modal.jpg" alt="Офис Девайс по адресу: улица Строителей дом 15, город Москва">
+    <img src="img/map-modal.jpg" width="960" height="559" alt="Офис Девайс по адресу: улица Строителей дом 15, город Москва">
     <button class="modal-button" type="button">Закрыть</button>
   </section>
 
