Добавлена разметка карусели на главной странице

--- a/index.html
+++ b/index.html
@@ -77,6 +77,75 @@
   <main>
     <h1 class="visually-hidden">Главная страница "Device"</h1>
 
+    <section class="carousel-products">
+      <h2 class="visually-hidden">Карусель товаров</h2>
+
+      <ul class="carousel-list">
+        <li>
+          <img src="image.png" alt="Изображение трёх селфи-палок">
+          <b>Делай селфи, как Бен Стиллер!</b>
+          <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
+          <table>
+            <tr>
+              <th>Длина палки</th>
+              <th>Вес палки</th>
+              <th>Материал</th>
+            </tr>
+            <tr>
+              <td>8,5 м</td>
+              <td>5 кг</td>
+              <td>Карбон</td>
+            </tr>
+          </table>
+          <a class="button" href="#">Подробнее</a>
+        </li>
+        <li>
+          <img src="image.png" alt="Изображение фитнес-браслета">
+          <b>Худеем правильно!</b>
+          <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
+          <table>
+            <tr>
+              <th>Без подзарядки</th>
+            </tr>
+            <tr>
+              <td>48 часов</td>
+            </tr>
+          </table>
+          <a class="button" href="#">Подробнее</a>
+        </li>
+        <li>
+          <img src="image.png" alt="Изображение квадрокоптера">
+          <b>Порхает как бабочка, жалит как пчела!</b>
+          <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
+          <table>
+            <tr>
+              <th>Дальность полета</th>
+              <th>Радиус поражения</th>
+            </tr>
+            <tr>
+              <td>800 м</td>
+              <td>50 м</td>
+            </tr>
+          </table>
+          <a class="button" href="#">Подробнее</a>
+        </li>
+      </ul>
+      <ul class="carousel-controls">
+        <li>
+          <input id="carousel-control-1" type="radio" name="carousel" value="carousel-1" checked>
+          <label for="carousel-control-1">Первый слайд</label>
+        </li>
+        <li>
+          <input id="carousel-control-2" type="radio" name="carousel" value="carousel-2">
+          <label for="carousel-control-2">Второй слайд</label>
+        </li>
+        <li>
+          <input id="carousel-control-3" type="radio" name="carousel" value="carousel-3">
+          <label for="carousel-control-3">Третий слайд</label>
+        </li>
+      </ul>
+    </section>
+
     <section class="about">
       <h2>О нас</h2>
       <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
