Добавлена разметка категорий товаров

--- a/index.html
+++ b/index.html
@@ -146,6 +146,42 @@
       </ul>
     </section>
 
+    <section class="categories">
+      <h2 class="visually-hidden">Категории товаров</h2>
+      <ul class="categories-list">
+        <li>
+          <a href="#">
+            <p>Виртуальная реальность</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <p>Моноподы для селфи</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <p>Экшн-камеры</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <p>Фитнес-браслеты</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <p>Умные часы</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <p>Квадрокоптеры</p>
+          </a>
+        </li>
+      </ul>
+    </section>
+
     <section class="about">
       <h2>О нас</h2>
       <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
