Добавлена разметка блока "Сервисы"

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     </section>
 
     <section class="categories">
-      <h2 class="visually-hidden">Категории товаров</h2>
+      <h2 class="visually-hidden">Популярные категории товаров</h2>
       <ul class="categories-list">
         <li>
           <a href="#">
@@ -179,6 +179,42 @@
             <p>Квадрокоптеры</p>
           </a>
         </li>
+      </ul>
+    </section>
+
+    <section class="services">
+      <h2 class="visually-hidden">Предоставляемые услуги</h2>
+      <ul class="services-control">
+        <li>
+          <input id="services-delivery" type="radio" name="services" value="delivery" checked>
+          <label for="services-delivery">Доставка</label>
+        </li>
+        <li>
+          <input id="services-guarantee" type="radio" name="services" value="guarantee">
+          <label for="services-guarantee">Гарантия</label>
+        </li>
+        <li>
+          <input id="services-credit" type="radio" name="services" value="credit">
+          <label for="services-credit">Кредит</label>
+        </li>
+      </ul>
+
+      <ul class="services-list">
+        <li>
+          <h3>Доставка</h3>
+          <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+        </li>
+      </ul>
+      <li>
+        <h3>Гарантия</h3>
+        <p>Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый.Товар, не дом, конечно же.</p>
+      </li>
+      </ul>
+      <li>
+        <h3>Кредит</h3>
+        <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные
+          условия кредита. Выгодные для нашего банка, разумеется.</p>
+      </li>
       </ul>
     </section>
 
