Добавлена разметка блока "Бренды"

--- a/index.html
+++ b/index.html
@@ -215,6 +215,31 @@
       </ul>
     </section>
 
+    <section class="brands">
+      <h2 class="visually-hidden">Бренды товаров, которые у нас есть в наличии</h2>
+      <ul>
+        <li>
+          <a href="#">
+            <img src="img/image.png" alt="Логотип компании DJI">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="img/image.png" alt="Логотип компании SP Gadgets">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="img/image.png" alt="Логотип компании GoPro">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="img/image.png" alt="Логотип компании VIVE">
+          </a>
+        </li>
+      </ul>
+    </section>
 
     <section class="about">
       <h2>О нас</h2>
