Редактировние значений атрибутов alt

--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
     <h1 class="visually-hidden">Главная страница "Device"</h1>
 
     <section class="carousel-products">
-      <h2 class="visually-hidden">Карусель товаров</h2>
+      <h2 class="visually-hidden">Карусель популярных товаров</h2>
 
       <ul class="carousel-list">
         <li>
-          <img src="image.png" alt="Изображение трёх селфи-палок">
+          <img src="image.png" alt="Селфи-палка">
           <b>Делай селфи, как Бен Стиллер!</b>
           <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
           <table>
@@ -100,7 +100,7 @@
           <a class="button" href="#">Подробнее</a>
         </li>
         <li>
-          <img src="image.png" alt="Изображение фитнес-браслета">
+          <img src="image.png" alt="Фитнес-браслет">
           <b>Худеем правильно!</b>
           <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
           <table>
@@ -114,7 +114,7 @@
           <a class="button" href="#">Подробнее</a>
         </li>
         <li>
-          <img src="image.png" alt="Изображение квадрокоптера">
+          <img src="image.png" alt="Квадрокоптер">
           <b>Порхает как бабочка, жалит как пчела!</b>
           <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
           <table>
@@ -220,22 +220,22 @@
       <ul>
         <li>
           <a href="#">
-            <img src="img/image.png" alt="Логотип компании DJI">
+            <img src="img/image.png" alt="Компания DJI">
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="img/image.png" alt="Логотип компании SP Gadgets">
+            <img src="img/image.png" alt="Компания SP Gadgets">
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="img/image.png" alt="Логотип компании GoPro">
+            <img src="img/image.png" alt="Компания GoPro">
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="img/image.png" alt="Логотип компании VIVE">
+            <img src="img/image.png" alt="Компания VIVE">
           </a>
         </li>
       </ul>
