Добавлена разметка пагинации

--- a/catalog.html
+++ b/catalog.html
@@ -215,6 +215,22 @@
           <p class="catalog-item-price">4 900 руб.</p>
         </li>
       </ul>
+      <ul class="catalog-pagination">
+        <li class="catalog-pagination-back">
+          <a href="#">Назад</a>
+        </li>
+        <li class="catalog-pagination-number">
+          <ul>
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+          </ul>
+        </li>
+        <li class="catalog-pagination-next">
+          <a href="#">Вперед</a>
+        </li>
+      </ul>
+
     </section>
   </main>
 
