Изменение разметки элементов управления слайдеров

--- a/index.html
+++ b/index.html
@@ -132,16 +132,13 @@
       </ul>
       <ul class="carousel-controls">
         <li>
-          <input id="carousel-control-1" type="radio" name="carousel" value="carousel-1" checked>
-          <label for="carousel-control-1">Первый слайд</label>
+          <button class="carousel-button">Первый слайд</button>
         </li>
         <li>
-          <input id="carousel-control-2" type="radio" name="carousel" value="carousel-2">
-          <label for="carousel-control-2">Второй слайд</label>
+          <button class="carousel-button">Второй слайд</button>
         </li>
         <li>
-          <input id="carousel-control-3" type="radio" name="carousel" value="carousel-3">
-          <label for="carousel-control-3">Третий слайд</label>
+          <button class="carousel-button">Третий слайд</button>
         </li>
       </ul>
     </section>
@@ -186,16 +183,13 @@
       <h2 class="visually-hidden">Предоставляемые услуги</h2>
       <ul class="services-control">
         <li>
-          <input id="services-delivery" type="radio" name="services" value="delivery" checked>
-          <label for="services-delivery">Доставка</label>
+          <button class="services-button">Доставка</button>
         </li>
         <li>
-          <input id="services-guarantee" type="radio" name="services" value="guarantee">
-          <label for="services-guarantee">Гарантия</label>
+          <button class="services-button">Гарантия</button>
         </li>
         <li>
-          <input id="services-credit" type="radio" name="services" value="credit">
-          <label for="services-credit">Кредит</label>
+          <button class="services-button">Кредит</button>
         </li>
       </ul>
 
